# localshare

./: .gitignore  README.md  main.py  pyproject.toml
docs/: architecture.md
extension/: extension.js  install.sh  metadata.json  prefs.js  setup.sh  stylesheet.css
extension/backend/: main.py
extension/backend/api/: browser.py  files.py
extension/backend/auth/: __init__.py
extension/backend/models/: activity.py
extension/backend/services/: manager.py
extension/backend/websocket/: events.py
extension/schemas/: org.gnome.shell.extensions.localshare.gschema.xml
extension/services/: backend.js  http.js
extension/src/: main.js
server/: requirements.txt
server/backend/: __init__.py  main.py  run.py
server/backend/api/: __init__.py  browser.py  internal.py
server/backend/auth/: dependencies.py  session.py
server/backend/data/: config.json
server/backend/models/: __init__.py  client.py  config.py  session.py
server/backend/services/: __init__.py  manager.py  network.py
server/backend/storage/: __init__.py  json_store.py  manager.py
server/backend/websocket/: __init__.py  client.py  extension.py
server/static/: app.js  index.html  style.css
shared/: constants.py
static/: style.css  upload.js
templates/: index.html
tests/: conftest.py
tests/backend/: test_api.py  test_json_store.py  test_models.py  test_network.py  test_services.py  test_websocket.py
